--- a/Pairs/Views/Base.lproj/Main.storyboard
+++ b/Pairs/Views/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -531,7 +532,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y2v-ko-fax">
                                 <rect key="frame" x="0.0" y="86" width="320" height="402"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0pQ-4I-nvu">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="0pQ-4I-nvu">
                                     <size key="itemSize" width="92" height="143"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -545,19 +546,29 @@
                                             <rect key="frame" x="0.0" y="0.0" width="92" height="143"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUr-rQ-nd9">
-                                                    <rect key="frame" x="7" y="0.0" width="85" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUr-rQ-nd9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="92" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="adR-sg-MGd"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Smh-If-mn6">
-                                                    <rect key="frame" x="4" y="20" width="81" height="110"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Smh-If-mn6">
+                                                    <rect key="frame" x="0.0" y="21" width="92" height="122"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="Smh-If-mn6" firstAttribute="leading" secondItem="fo2-cn-ren" secondAttribute="leading" id="1l5-fl-VXD"/>
+                                            <constraint firstAttribute="trailing" secondItem="Smh-If-mn6" secondAttribute="trailing" id="Wxs-wU-hZh"/>
+                                            <constraint firstItem="aUr-rQ-nd9" firstAttribute="top" secondItem="fo2-cn-ren" secondAttribute="top" id="XBn-qc-Svk"/>
+                                            <constraint firstAttribute="trailing" secondItem="aUr-rQ-nd9" secondAttribute="trailing" id="djr-fi-N36"/>
+                                            <constraint firstItem="Smh-If-mn6" firstAttribute="top" secondItem="aUr-rQ-nd9" secondAttribute="bottom" id="ofj-xT-an5"/>
+                                            <constraint firstItem="aUr-rQ-nd9" firstAttribute="leading" secondItem="fo2-cn-ren" secondAttribute="leading" id="p5N-fo-aI3"/>
+                                            <constraint firstAttribute="bottom" secondItem="Smh-If-mn6" secondAttribute="bottom" id="peK-kz-O9u"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="cellImage" destination="Smh-If-mn6" id="kjp-Hd-obR"/>
                                             <outlet property="cellLabel" destination="aUr-rQ-nd9" id="UND-0l-YCf"/>
@@ -834,7 +845,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="421"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="HighScoreCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="HvL-11-zOZ" customClass="HighScoreCell" customModule="Pairs" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="HighScoreCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="HvL-11-zOZ" customClass="HighScoreCell" customModule="Pairs" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HvL-11-zOZ" id="0uB-2v-Npg">
